--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,28 +1,42 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-column-gap: 20px;
+  grid-template-rows: 1fr 2fr 3fr 2fr 1fr;
+  grid-row-gap: 20px;
+  height: 100vh;
 }
 
 .App-header {
+  grid-column: 1/1;
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+}
+
+.featuredPost {
+  grid-column: 1/1;
+  grid-row: 2/4;
+
+}
+
+.spotifyPlayer {
+grid-column: 2/3;
+grid-row: 2/5;
+}
+
+.otherPosts {
+  grid-column: 1/1;
+  grid-row-start: 4;
+}
+
+.footer {
+  grid-column: 1/3;
+  grid-row-start: 5;
 }
 
 .App-title {
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
