--- a/src/components/PlaylistChooser.css
+++ b/src/components/PlaylistChooser.css
@@ -2,6 +2,12 @@
 
 .PlaylistChooser {
 	height: 100%;
-	max-width:800px; 
 	width:100%;
+	max-width:800px; 
+	display: flex;
+}
+
+ul {
+	max-height: 500px;
+	overflow: auto;
 }
