--- a/src/components/ConnectSpotify.css
+++ b/src/components/ConnectSpotify.css
@@ -3,5 +3,8 @@
 .ConnectSpotify {
 	height: 100%;
 	max-width:800px; 
-	width:100%;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-content: space-around;
 }
