--- a/src/components/SpotifyContainer.css
+++ b/src/components/SpotifyContainer.css
@@ -4,4 +4,8 @@
 	height: 100%;
 	max-width:800px; 
 	width:100%;
+	display: flex;
+	flex-direction: column;
+	align-self: flex-end;
+	justify-content: stretch;
 }
