--- a/src/components/PlaylistChooser.css
+++ b/src/components/PlaylistChooser.css
@@ -8,6 +8,9 @@
 	flex-direction: column;
 	align-content: space-around;
 	justify-content: space-around;
+	width: '100%';
+    max-width: 360;
+    position: 'relative'
 }
 
 ul {
@@ -18,4 +21,20 @@ ul {
 .playNowButton {
 	max-width: 75%;
 	align-self: center;
+}
+
+.optionsSelection: {
+  flex: 1 1 auto;
+  background-color: 'inherit';
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+},
+
+.playlistViewer: {
+  height: 200px;
+  overflow: auto;
+  flex: 2 1 auto;
+  background-color: inherit;
 }
