--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,29 +17,27 @@
 }
 
 .App-header {
-  grid-column: 1/1;
+  grid-column: 1/-1;
 }
 
 .featuredPost {
   grid-column: 1/1;
-  grid-row: 2/4;
-
+  grid-row: 2/3;
 }
 
 .spotifyPlayer {
 grid-column: 2/3;
-grid-row: 2/5;
+grid-row: 2/3;
 }
 
 .otherPosts {
   grid-column: 1/1;
-  grid-row-start: 4;
+  grid-row-start: 3;
 }
 
 .footer {
-  grid-column: 1/3;
+  grid-column: 1/-1;
   grid-row-start: 5;
-  max-width:800px; 
 }
 
 .App-title {
@@ -66,12 +64,14 @@ grid-row: 2/5;
 }
 
 .App-header {
-  grid-column: 1/1;
+  grid-column: 1/-1;
   grid-row: 1/1;
+  display: flex;
+  justify-content: center
 }
 
 .featuredPost {
-  grid-column: 1/1;
+  grid-column: 1/-1;
   grid-row: 2/3;
 
 }
@@ -83,12 +83,12 @@ grid-row: 3/4;
 
 .otherPosts {
   grid-column: 1/1;
-  grid-row-start: 4/5;
+  grid-row: 4/5;
 }
 
 .footer {
   grid-column: 1/1;
-  grid-row-start: 5/6;
+  grid-row: 5/6;
 }
 
 .App-title {
@@ -96,5 +96,7 @@ grid-row: 3/4;
 }
 
 }
+
+
 
 
