--- a/src/components/ConnectSpotify.css
+++ b/src/components/ConnectSpotify.css
@@ -8,3 +8,28 @@
 	flex-direction: column;
 	align-content: space-around;
 }
+
+button {
+	margin-bottom: 20px;
+	background-color:#44c767;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+
+button:hover {
+	background-color:#5cbf2a;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
